z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ a:hover {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-  z-index: 1;
+  z-index: 10;
 }
 
 .icons {
